syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message RequestEntry{
    string ipaddress = 1;
    int32 port = 2;
}

message HashRingEntry{
    bytes position = 1;
    string ipaddress = 2;
    int32 port = 3;
    bool add = 4;
}

message HashRing{
    map<string, HashRingEntry> hashRings = 1;
}

message RequestMap{
    string ipaddress = 1;
    int32 port = 2;
}

message Heartbeat{
    int32 map_size = 1;
    bool map_correct = 2;
}

message RemoveNode{
    string key = 1;
}

message DataPacket{
    oneof responses{
        RequestEntry requestentry = 1;
        HashRing hashring = 2;
        HashRingEntry hashringentry = 3;
        RequestMap requestmap = 4;
        Heartbeat heartbeat = 5;
        RemoveNode removenode = 6;
    }
}

