syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message Request {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    bool islast = 4;
    Op_code opcode = 5;
    string ipaddress = 6;
    int32 port = 7;
    enum Op_code {
        store_chunk = 0;
        get_chunk = 1;
        get_data = 2;
        get_list = 3;
        get_chunk_loc = 4;
    }
}

message ChunkReply{
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    bool islast = 4;
}

message HashRingEntry{
    bytes position = 1;
    string ipaddress = 2;
    int32 port = 3;
}

message NumberOfChunks{
    int32 chunkNumber = 1;
}

message SingleChunk{
    string fileName = 1;
    int32 chunkNumber = 2;
    bytes data = 3;
    string ipaddress = 4;
    int32 port = 5;
    bool isLast = 6;
}

message ListAllChunks{
    repeated SingleChunk singlechunk = 1;
}

message DataPacket {
    oneof packets{
        Request request = 1;
        HashRingEntry hashringentry = 2;
        NumberOfChunks numberofchunks = 3;
        ListAllChunks listallchunks = 4;
        ChunkReply chunkReply = 5;
        SingleChunk singlechunk = 6;
    }
}


